# maestro-client

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-builder  Dockerfile-example  Makefile  README.md  RELEASE.md  binding.gyp  build_libs.sh  conanfile.txt  package.json
cpplib/: CMakeLists.txt  lib.mk
cpplib/include/: client.h  utils.h
cpplib/src/: client.cpp  client_wrapper.cpp  example.cpp  utils.cpp
example-room/: Dockerfile  example.mk
fake-server/: requirements.txt  server.py
maestro-node/: Dockerfile  Makefile  README.md  addon.cpp  binding.gyp  install.sh  package-lock.json  package.json
maestro-node/example/: Dockerfile  Dockerfile.alpine  Dockerfile.debian  app.js  package.json  scheduler.yaml
maestro-unity/: Maestro.cs  Makefile  maestro-unity.csproj  maestro-unity.nuspec
maestro-unity/Plugins/: libmaestro.bundle
profiles/: linux
room-example/: CMakeLists.txt
room-example/src/: example.cpp
