FIND_PACKAGE (Threads)
ADD_EXECUTABLE(example ./src/example.cpp)
TARGET_COMPILE_FEATURES(example PRIVATE cxx_range_for)
FIND_LIBRARY(RC_LIB_LOCATION restclient-cpp)
IF(RC_LIB_LOCATION)
  MESSAGE(STATUS ${RC_LIB_LOCATION})
  TARGET_LINK_LIBRARIES(example maestro ${CMAKE_THREAD_LIBS_INIT} ${RC_LIB_LOCATION})
ELSE()
  MESSAGE(FATAL_ERROR "FATAL ERROR: missing library")
ENDIF()
